force-app/main/default/objects/Contact/fields/Favorite_Music__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Music__c</fullName>
    <label>Favorite Music</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Music_Genres</valueSetName>
    </valueSet>
</CustomField>