force-app/main/default/objects/Contact/fields/Favorite_Sport__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sport__c</fullName>
    <label>Favorite Sport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sports</valueSetName>
    </valueSet>
</CustomField>