force-app/main/default/objects/Contact/fields/Office_Floor__c.field-meta.xml
<CustomField>
    <fullName>Office_Floor__c</fullName>
    <label>Office Floor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>